add: 送信機能追加

--- a/another.html
+++ b/another.html
@@ -7,5 +7,7 @@
 </head>
 <body>
   <p>This is another HTML page. It is new branch here.</p>
+  <input type="text">
+  <input type="submit" value="送信">
 </body>
 </html>
