--- a/another.html
+++ b/another.html
@@ -7,7 +7,10 @@
 </head>
 <body>
   <p>This is another HTML page. It is new branch here.</p>
-  <input type="text">
-  <input type="submit" value="送信">
+  <input id="text-box" type="text">
+  <input id="submit-button" type="submit" value="送信">
+  <ul id="tasks">
+  </ul>
 </body>
+<script src="index.js"></script>
 </html>
